// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binary expressions ordering parentheses ("-1+1") 1`] = `
"local ____exports = {}
____exports.__result = -1 + 1
return ____exports"
`;

exports[`Binary expressions ordering parentheses ("1*(3+4)") 1`] = `
"local ____exports = {}
____exports.__result = 1 * (3 + 4)
return ____exports"
`;

exports[`Binary expressions ordering parentheses ("1*(3+4*2)") 1`] = `
"local ____exports = {}
____exports.__result = 1 * (3 + 4 * 2)
return ____exports"
`;

exports[`Binary expressions ordering parentheses ("1*30+4") 1`] = `
"local ____exports = {}
____exports.__result = 1 * 30 + 4
return ____exports"
`;

exports[`Binary expressions ordering parentheses ("1+1") 1`] = `
"local ____exports = {}
____exports.__result = 1 + 1
return ____exports"
`;

exports[`Binary expressions ordering parentheses ("10-(4+5)") 1`] = `
"local ____exports = {}
____exports.__result = 10 - (4 + 5)
return ____exports"
`;

exports[`Bitop [5.0] ("~a"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.bnot(a)
return ____exports"
`;

exports[`Bitop [5.0] ("~a"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a&=b"): code 1`] = `
"local ____exports = {}
a = bit.band(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.0] ("a&=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a&b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.band(a, b)
return ____exports"
`;

exports[`Bitop [5.0] ("a&b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a<<=b"): code 1`] = `
"local ____exports = {}
a = bit.lshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.0] ("a<<=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a<<b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.lshift(a, b)
return ____exports"
`;

exports[`Bitop [5.0] ("a<<b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a>>=b"): code 1`] = `
"local ____exports = {}
a = bit.arshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.0] ("a>>=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a>>>=b"): code 1`] = `
"local ____exports = {}
a = bit.rshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.0] ("a>>>=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a>>>b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.rshift(a, b)
return ____exports"
`;

exports[`Bitop [5.0] ("a>>>b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a>>b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.arshift(a, b)
return ____exports"
`;

exports[`Bitop [5.0] ("a>>b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a^=b"): code 1`] = `
"local ____exports = {}
a = bit.bxor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.0] ("a^=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a^b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.bxor(a, b)
return ____exports"
`;

exports[`Bitop [5.0] ("a^b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a|=b"): code 1`] = `
"local ____exports = {}
a = bit.bor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.0] ("a|=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.0] ("a|b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.bor(a, b)
return ____exports"
`;

exports[`Bitop [5.0] ("a|b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.0."`;

exports[`Bitop [5.1] ("~a"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.bnot(a)
return ____exports"
`;

exports[`Bitop [5.1] ("~a"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a&=b"): code 1`] = `
"local ____exports = {}
a = bit.band(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.1] ("a&=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a&b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.band(a, b)
return ____exports"
`;

exports[`Bitop [5.1] ("a&b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a<<=b"): code 1`] = `
"local ____exports = {}
a = bit.lshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.1] ("a<<=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a<<b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.lshift(a, b)
return ____exports"
`;

exports[`Bitop [5.1] ("a<<b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a>>=b"): code 1`] = `
"local ____exports = {}
a = bit.arshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.1] ("a>>=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a>>>=b"): code 1`] = `
"local ____exports = {}
a = bit.rshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.1] ("a>>>=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a>>>b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.rshift(a, b)
return ____exports"
`;

exports[`Bitop [5.1] ("a>>>b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a>>b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.arshift(a, b)
return ____exports"
`;

exports[`Bitop [5.1] ("a>>b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a^=b"): code 1`] = `
"local ____exports = {}
a = bit.bxor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.1] ("a^=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a^b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.bxor(a, b)
return ____exports"
`;

exports[`Bitop [5.1] ("a^b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a|=b"): code 1`] = `
"local ____exports = {}
a = bit.bor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.1] ("a|=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.1] ("a|b"): code 1`] = `
"local ____exports = {}
____exports.__result = bit.bor(a, b)
return ____exports"
`;

exports[`Bitop [5.1] ("a|b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Bitwise operations is/are not supported for target Lua 5.1."`;

exports[`Bitop [5.2] ("~a") 1`] = `
"local ____exports = {}
____exports.__result = bit32.bnot(a)
return ____exports"
`;

exports[`Bitop [5.2] ("a&=b") 1`] = `
"local ____exports = {}
a = bit32.band(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.2] ("a&b") 1`] = `
"local ____exports = {}
____exports.__result = bit32.band(a, b)
return ____exports"
`;

exports[`Bitop [5.2] ("a<<=b") 1`] = `
"local ____exports = {}
a = bit32.lshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.2] ("a<<b") 1`] = `
"local ____exports = {}
____exports.__result = bit32.lshift(a, b)
return ____exports"
`;

exports[`Bitop [5.2] ("a>>=b") 1`] = `
"local ____exports = {}
a = bit32.arshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.2] ("a>>>=b") 1`] = `
"local ____exports = {}
a = bit32.rshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.2] ("a>>>b") 1`] = `
"local ____exports = {}
____exports.__result = bit32.rshift(a, b)
return ____exports"
`;

exports[`Bitop [5.2] ("a>>b") 1`] = `
"local ____exports = {}
____exports.__result = bit32.arshift(a, b)
return ____exports"
`;

exports[`Bitop [5.2] ("a^=b") 1`] = `
"local ____exports = {}
a = bit32.bxor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.2] ("a^b") 1`] = `
"local ____exports = {}
____exports.__result = bit32.bxor(a, b)
return ____exports"
`;

exports[`Bitop [5.2] ("a|=b") 1`] = `
"local ____exports = {}
a = bit32.bor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.2] ("a|b") 1`] = `
"local ____exports = {}
____exports.__result = bit32.bor(a, b)
return ____exports"
`;

exports[`Bitop [5.3] ("~a") 1`] = `
"local ____exports = {}
____exports.__result = ~a
return ____exports"
`;

exports[`Bitop [5.3] ("a&=b") 1`] = `
"local ____exports = {}
a = a & b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.3] ("a&b") 1`] = `
"local ____exports = {}
____exports.__result = a & b
return ____exports"
`;

exports[`Bitop [5.3] ("a<<=b") 1`] = `
"local ____exports = {}
a = a << b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.3] ("a<<b") 1`] = `
"local ____exports = {}
____exports.__result = a << b
return ____exports"
`;

exports[`Bitop [5.3] ("a>>>=b") 1`] = `
"local ____exports = {}
a = a >> b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.3] ("a>>>b") 1`] = `
"local ____exports = {}
____exports.__result = a >> b
return ____exports"
`;

exports[`Bitop [5.3] ("a^=b") 1`] = `
"local ____exports = {}
a = a ~ b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.3] ("a^b") 1`] = `
"local ____exports = {}
____exports.__result = a ~ b
return ____exports"
`;

exports[`Bitop [5.3] ("a|=b") 1`] = `
"local ____exports = {}
a = a | b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.3] ("a|b") 1`] = `
"local ____exports = {}
____exports.__result = a | b
return ____exports"
`;

exports[`Bitop [5.4] ("~a") 1`] = `
"local ____exports = {}
____exports.__result = ~a
return ____exports"
`;

exports[`Bitop [5.4] ("a&=b") 1`] = `
"local ____exports = {}
a = a & b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.4] ("a&b") 1`] = `
"local ____exports = {}
____exports.__result = a & b
return ____exports"
`;

exports[`Bitop [5.4] ("a<<=b") 1`] = `
"local ____exports = {}
a = a << b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.4] ("a<<b") 1`] = `
"local ____exports = {}
____exports.__result = a << b
return ____exports"
`;

exports[`Bitop [5.4] ("a>>>=b") 1`] = `
"local ____exports = {}
a = a >> b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.4] ("a>>>b") 1`] = `
"local ____exports = {}
____exports.__result = a >> b
return ____exports"
`;

exports[`Bitop [5.4] ("a^=b") 1`] = `
"local ____exports = {}
a = a ~ b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.4] ("a^b") 1`] = `
"local ____exports = {}
____exports.__result = a ~ b
return ____exports"
`;

exports[`Bitop [5.4] ("a|=b") 1`] = `
"local ____exports = {}
a = a | b
____exports.__result = a
return ____exports"
`;

exports[`Bitop [5.4] ("a|b") 1`] = `
"local ____exports = {}
____exports.__result = a | b
return ____exports"
`;

exports[`Bitop [JIT] ("~a") 1`] = `
"local ____exports = {}
____exports.__result = bit.bnot(a)
return ____exports"
`;

exports[`Bitop [JIT] ("a&=b") 1`] = `
"local ____exports = {}
a = bit.band(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [JIT] ("a&b") 1`] = `
"local ____exports = {}
____exports.__result = bit.band(a, b)
return ____exports"
`;

exports[`Bitop [JIT] ("a<<=b") 1`] = `
"local ____exports = {}
a = bit.lshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [JIT] ("a<<b") 1`] = `
"local ____exports = {}
____exports.__result = bit.lshift(a, b)
return ____exports"
`;

exports[`Bitop [JIT] ("a>>=b") 1`] = `
"local ____exports = {}
a = bit.arshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [JIT] ("a>>>=b") 1`] = `
"local ____exports = {}
a = bit.rshift(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [JIT] ("a>>>b") 1`] = `
"local ____exports = {}
____exports.__result = bit.rshift(a, b)
return ____exports"
`;

exports[`Bitop [JIT] ("a>>b") 1`] = `
"local ____exports = {}
____exports.__result = bit.arshift(a, b)
return ____exports"
`;

exports[`Bitop [JIT] ("a^=b") 1`] = `
"local ____exports = {}
a = bit.bxor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [JIT] ("a^b") 1`] = `
"local ____exports = {}
____exports.__result = bit.bxor(a, b)
return ____exports"
`;

exports[`Bitop [JIT] ("a|=b") 1`] = `
"local ____exports = {}
a = bit.bor(a, b)
____exports.__result = a
return ____exports"
`;

exports[`Bitop [JIT] ("a|b") 1`] = `
"local ____exports = {}
____exports.__result = bit.bor(a, b)
return ____exports"
`;

exports[`Null Expression 1`] = `
"local ____exports = {}
____exports.__result = nil
return ____exports"
`;

exports[`Unary expressions basic ("!a") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = not a
end
return ____exports"
`;

exports[`Unary expressions basic ("++i") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    i = i + 1
end
return ____exports"
`;

exports[`Unary expressions basic ("+a") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = a
end
return ____exports"
`;

exports[`Unary expressions basic ("--i") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    i = i - 1
end
return ____exports"
`;

exports[`Unary expressions basic ("-a") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    local ____ = -a
end
return ____exports"
`;

exports[`Unary expressions basic ("delete tbl.test") 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Delete = ____lualib.__TS__Delete
local ____exports = {}
function ____exports.__main(self)
    __TS__Delete(tbl, \\"test\\")
end
return ____exports"
`;

exports[`Unary expressions basic ("delete tbl['test']") 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Delete = ____lualib.__TS__Delete
local ____exports = {}
function ____exports.__main(self)
    __TS__Delete(tbl, \\"test\\")
end
return ____exports"
`;

exports[`Unary expressions basic ("i++") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    i = i + 1
end
return ____exports"
`;

exports[`Unary expressions basic ("i--") 1`] = `
"local ____exports = {}
function ____exports.__main(self)
    i = i - 1
end
return ____exports"
`;

exports[`Unary expressions basic ("let a = delete tbl.test") 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Delete = ____lualib.__TS__Delete
local ____exports = {}
function ____exports.__main(self)
    local a = __TS__Delete(tbl, \\"test\\")
end
return ____exports"
`;

exports[`Unary expressions basic ("let a = delete tbl['test']") 1`] = `
"local ____lualib = require(\\"lualib_bundle\\")
local __TS__Delete = ____lualib.__TS__Delete
local ____exports = {}
function ____exports.__main(self)
    local a = __TS__Delete(tbl, \\"test\\")
end
return ____exports"
`;

exports[`Undefined Expression 1`] = `
"local ____exports = {}
____exports.__result = nil
return ____exports"
`;

exports[`Unsupported bitop 5.3 ("a>>=b"): code 1`] = `
"local ____exports = {}
a = a >> b
____exports.__result = a
return ____exports"
`;

exports[`Unsupported bitop 5.3 ("a>>=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Right shift operator is not supported for target Lua 5.3. Use \`>>>\` instead."`;

exports[`Unsupported bitop 5.3 ("a>>b"): code 1`] = `
"local ____exports = {}
____exports.__result = a >> b
return ____exports"
`;

exports[`Unsupported bitop 5.3 ("a>>b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Right shift operator is not supported for target Lua 5.3. Use \`>>>\` instead."`;

exports[`Unsupported bitop 5.4 ("a>>=b"): code 1`] = `
"local ____exports = {}
a = a >> b
____exports.__result = a
return ____exports"
`;

exports[`Unsupported bitop 5.4 ("a>>=b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Right shift operator is not supported for target Lua 5.3. Use \`>>>\` instead."`;

exports[`Unsupported bitop 5.4 ("a>>b"): code 1`] = `
"local ____exports = {}
____exports.__result = a >> b
return ____exports"
`;

exports[`Unsupported bitop 5.4 ("a>>b"): diagnostics 1`] = `"main.ts(1,25): error TSTL: Right shift operator is not supported for target Lua 5.3. Use \`>>>\` instead."`;
